@@ -1,5 +1,9 @@
 [b]Version 0.6.6[/b]:
 
+(2008-11-27)
+ * Added an option in Preferences->General to change the method to store
+   the file settings.
+
 (2008-11-26)
  * Implemented a new (and optional) method to save the file settings.
    This method uses an ini file per each played file (instead of using only 
